data/all_generated_tests/raw_wast_tests/br_table_IncorrectBranchTargetResolution_2050.wast
;; 10. **Branch to End of Control Structure:**     Define `br_table` with labels pointing to the end marker of control structures.     - **Test Constraint:** `br_table` should properly branch to the end of structures.     - **Expected Differential:** WebAssembly should resolve correctly or trap, wizard_engine might misinterpret the end marker.

(assert_invalid
  (module
    (func $branch-to-end
      (block
        (br_table 0 0 (i32.const 1))
      )
    )
  )
  "branch to end of control structure"
)